Allow users to change positition of the pictures

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="vie_practice">THỰC HÀNH</string>
     <string name="main_screen">MÀN HÌNH CHÍNH</string>
     <string name="end_practice">KẾT THÚC</string>
+    <string name="change_pos">CHỈNH VỊ TRÍ</string>
 </resources>
